# fastid

./: .gitignore  example.env  pyproject.toml
.github/workflows/: learn-github-actions.yml
fastid/: app.py
templates/: home.html  profile.html
tests/: test_app.py
