[tool.poetry]
name = "fastid"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
authlib = "^1.3.0"
jinja2 = "^3.1.3"
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pytest-asyncio = "^0.23.3"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "lsof -ti :8000 | xargs kill -9 | uvicorn fastid.app:app"